@@ -142,6 +142,10 @@ class TestGlobster(TestCase):
             (ur'RE:(?P<a>.)(?P=a)',
              [u'a'],
              [u'ab', u'aa', u'aaa']),
+            # test we can handle odd numbers of trailing backslashes
+            (u'RE:a\\\\\\',
+             [u'a\\'],
+             [u'a', u'ab', u'aa', u'aaa']),
             ])
 
     def test_question_mark(self):
@@ -224,6 +228,29 @@ class TestGlobster(TestCase):
             (u'./f*',
              [u'foo'],
              [u'foo/bar', u'foo/.bar', u'x/foo/y']),
+            ])
+
+    def test_backslash(self):
+        self.assertMatch([
+            (u'.\\foo',
+             [u'foo'],
+             [u'\u8336/foo', u'barfoo', u'x/y/foo']),
+            (u'.\\f*',
+             [u'foo'],
+             [u'foo/bar', u'foo/.bar', u'x/foo/y']),
+            (u'foo\\**\\x',
+             [u'foo/x', u'foo/bar/x'],
+             [u'foox', u'foo/bax', u'foo/.x', u'foo/bar/bax']),
+            ])
+
+    def test_trailing_slash(self):
+        self.assertMatch([
+            (u'./foo/',
+             [u'foo'],
+             [u'\u8336/foo', u'barfoo', u'x/y/foo']),
+            (u'.\\foo\\',
+             [u'foo'],
+             [u'foo/', u'\u8336/foo', u'barfoo', u'x/y/foo']),
             ])
 
     def test_leading_asterisk_dot(self):
