@@ -124,6 +124,9 @@ IN DEVELOPMENT
 
     * Fix problem with UNC paths on Windows 98. (Alexander Belchenko, #84728)
 
+    * Ignore patterns normalised to use '/' path separator.
+      (Kent Gibson, #86451)
+
   TESTING:
 
     * New ``--first`` option to ``bzr selftest`` to run specified tests
